--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,3 +1,15 @@
 <h1>Contact Page</h1>
 <p>To get in touch, email me at <a href="mailto:jon@calhoun.io">jon@calhoun.io</a>
 </p>
+
+<html>
+    <body>
+
+    </body>
+</html>
+
+<p>
+    <h1>
+
+    </h1>
+</p>
