Added tailwind css

--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -1,8 +1,3 @@
-<h1>Welcome to my awesome site, Friend</h1>
-
-{{template "lorem-ipsum"}}
-
-{{define "lorem-ipsum"}}
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt exercitationem, eius aut ab, magnam excepturi
-    dignissimos natus perspiciatis corporis cum sequi? Corporis qui aperiam error! Ipsa dolorum labore beatae amet!</p>
-{{end}}
+{{template "header" .}}
+<h1>Welcome to my awesome site!</h1>
+{{template "footer" .}}
