--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -1,3 +1,5 @@
 {{template "header" .}}
-<h1>Welcome to my awesome site!</h1>
+<div class="px-6">
+    <h1 class="py-4 text-xl semibold">Welcome to my awesome site!</h1>
+</div>
 {{template "footer" .}}
