--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -7,12 +7,27 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Web page</title>
 </head>
-<body>
+    <body>
+        <header class="bg-gradient-to-r from-blue-800 to-indigo-800 text-white">
+            <nav class="px-8 py-6 flex items-center">
+                <div class="text-4xl pr-12 font-serif">Lenslocked</div>
+                <div class="flex-grow">
+                    <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/">Home</a>
+                    <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/contact">Contact</a>
+                    <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/faq">FAQ</a>
+                </div>
+                <div>
+                    <a class="pr-4" href="#">Sign in</a>
+                    <a class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded" href="#">Sign Up</a>
+                </div>
+            </nav>
+        </header>
+
 {{end}}
 
 {{/*  each pages content goes here  */}}
 
 {{define "footer"}}
-</body>
+    </body>
 </html>
 {{end}}
