--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Web page</title>
 </head>
-    <body>
+    <body class="min-h-screen bg-gray-100">
         <header class="bg-gradient-to-r from-blue-800 to-indigo-800 text-white">
             <nav class="px-8 py-6 flex items-center">
                 <div class="text-4xl pr-12 font-serif">Lenslocked</div>
@@ -18,7 +18,7 @@
                 </div>
                 <div>
                     <a class="pr-4" href="#">Sign in</a>
-                    <a class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded" href="#">Sign Up</a>
+                    <a class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded" href="/signup">Sign Up</a>
                 </div>
             </nav>
         </header>
