--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -11,7 +11,8 @@
                 </label>
                 <input class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500
             text-gray-800 rounded" name="email" id="email" type="email"
-                       placeholder="Email address" required autocomplete="email"/>
+                       placeholder="Email address" required autocomplete="email" value="{{.Email}}"
+                       {{if not .Email}}autofocus{{end}}/>
             </div>
             <div class="py-2">
                 <label for="password" class="text-sm font-semibold text-gray-800">
@@ -19,7 +20,8 @@
                 </label>
                 <input class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500
             text-gray-800 rounded" name="password" id="password" type="password"
-                       placeholder="Password" required autocomplete="password"/>
+                       placeholder="Password" required autocomplete="password"
+                       {{if .Email}}autofocus{{end}}/>
             </div>
             <div class="py-4">
                 <button class="w-full py-4 px-2 bg-indigo-600 hover:bg-indigo-700
