--- a/templates/signin.gohtml
+++ b/templates/signin.gohtml
@@ -16,7 +16,7 @@
             </div>
             <div class="py-2">
                 <label for="password" class="text-sm font-semibold text-gray-800">
-                    Email Address
+                    Password
                 </label>
                 <input class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500
             text-gray-800 rounded" name="password" id="password" type="password"
